--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
+<div>
+  <div>
+    <figure>
+      <img class="img-flex" src="image/veggie-burger-1jpg" alt="">
+      <figcaption>
+        <p>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</p>
+      </figcaption>
+    </figure>
+  </div>
+
+  <div>
+    <figure>
+      <img class="img-flex" src="image/veggie-burger-2jpg" alt="">
+      <figcaption>
+        <p>Traditional veggie burger on a whole grain bun topped with sprouts.</p>
+      </figcaption>
+    </figure>
+  </div>
+
+  <div>
+    <figure>
+      <img class="img-flex" src="image/veggie-burger-3jpg" alt="">
+      <figcaption>
+        <p>Black bean burger with onion & lettuce, surrounded by an oat bun.</p>
+      </figcaption>
+    </figure>
+  </div>
+
 </head>
 <body>
 
